# IrrIMGUI

./: .gitignore  .travis.yml  CMakeLists.txt  Doxyfile.in  LICENSE  Makefile  README.md  Settings.mk  Version.cmake.in  _basic_memory_leak_detection_plugin_8h.html  _basic_memory_leak_detection_plugin_8h__incl.map  _basic_memory_leak_detection_plugin_8h__incl.md5  _basic_memory_leak_detection_plugin_8h_source.html  _c_basic_memory_leak_detection_8cpp.html  _c_basic_memory_leak_detection_8cpp__incl.map  _c_basic_memory_leak_detection_8cpp__incl.md5  _c_basic_memory_leak_detection_8cpp_source.html  _c_basic_memory_leak_detection_8h.html  _c_basic_memory_leak_detection_8h__dep__incl.map  _c_basic_memory_leak_detection_8h__dep__incl.md5  _c_basic_memory_leak_detection_8h__incl.map  _c_basic_memory_leak_detection_8h__incl.md5  _c_basic_memory_leak_detection_8h_source.html  _c_channel_buffer_8cpp.html  _c_channel_buffer_8cpp__incl.map  _c_channel_buffer_8cpp__incl.md5  _c_channel_buffer_8cpp_source.html  _c_char_fifo_8cpp.html  _c_char_fifo_8cpp__incl.map  _c_char_fifo_8cpp__incl.md5  _c_char_fifo_8cpp_source.html  _c_char_fifo_8h.html  _c_char_fifo_8h__dep__incl.map  _c_char_fifo_8h__dep__incl.md5  _c_char_fifo_8h__incl.map  _c_char_fifo_8h__incl.md5  _c_char_fifo_8h_source.html  _c_g_u_i_texture_8cpp.html  _c_g_u_i_texture_8cpp__incl.map  _c_g_u_i_texture_8cpp__incl.md5  (+787 more)
CMake/: ExampleBuild.cmake  PrintSettings.cmake  SourceFiles.cmake  Version.cmake
CMake/Compiler/: CompilerGccLikeSettings.cmake  CompilerMSVCLikeSettings.cmake
CMake/Dependencies/: DependencyDirectX9.cmake  DependencyDoxygen.cmake  DependencyIMGUI.cmake  DependencyIrrlicht.cmake  DependencyOpenGL.cmake  DependencyX11.cmake
CMake/OperationSystems/: UnixSettings.cmake  WindowsSettings.cmake
CMake/Options/: OptionBuildExamples.cmake  OptionInstallMediaFiles.cmake  OptionIrrlichtDirectIncludes.cmake  OptionNativeOpenGL.cmake  OptionStaticLib.cmake  OptionUnitTests.cmake
Doxygen/: MAIN.md  index.html
dependency/IMGUI/: install_IMGUI_here.txt
examples/: CMakeLists.txt
examples/01.HelloWorld/: CMakeLists.txt  main.cpp
examples/02.AnotherWindow/: CMakeLists.txt  main.cpp
examples/03.DifferentFonts/: CMakeLists.txt  main.cpp
examples/04.Images/: CMakeLists.txt  main.cpp
examples/05.DragNDrop/: CMakeLists.txt  main.cpp
examples/06.RenderWindow/: CMakeLists.txt  main.cpp
examples/Demo/: CMakeLists.txt  main.cpp
includes/IrrIMGUI/: CCharFifo.h  CIMGUIEventReceiver.h  CIMGUIEventStorage.h  CIMGUIHandle.h  IGUITexture.h  IIMGUIHandle.h  IMGUIHelper.h  IReferenceCounter.h  IncludeIMGUI.h  IncludeIrrlicht.h  IrrIMGUI.h  IrrIMGUIConfig.h  IrrIMGUIConstants.h  IrrIMGUIDebug.h  SIMGUISettings.h
includes/IrrIMGUI/Inject/: IrrIMGUIInject.h
includes/IrrIMGUI/Tools/: CBasicMemoryLeakDetection.h
includes/IrrIMGUI/UnitTest/: BasicMemoryLeakDetectionPlugin.h  IIMGUIHandleMock.h  IncludeCppUTest.h  MockHelper.h  UnitTest.h
media/: LICENSE.txt
scripts/: travis_build.sh  travis_clean.sh  travis_install_cmake.sh  travis_install_dependencies.sh  travis_prepare_cmake.sh
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  defines_0.js  defines_1.js  enums_0.js  enums_1.js  enumvalues_0.js  enumvalues_1.js  files_0.js  files_1.js  files_2.js  files_3.js  files_4.js  files_5.js  functions_0.js  functions_1.js  (+29 more)
source/: CBasicMemoryLeakDetection.cpp  CChannelBuffer.cpp  CCharFifo.cpp  CGUITexture.cpp  CGUITexture.h  CIMGUIEventReceiver.cpp  CIMGUIHandle.cpp  CIMGUIHandle.h  CIrrlichtIMGUIDriver.cpp  CIrrlichtIMGUIDriver.h  COpenGLIMGUIDriver.cpp  COpenGLIMGUIDriver.h  IIMGUIDriver.cpp  IIMGUIDriver.h  IMGUIHelper.cpp  IReferenceCounter.cpp  IrrIMGUIDebug_priv.h  IrrIMGUIInject.cpp  UnitTest.cpp
source/private/: CGUITexture.h  IrrIMGUIDebug_priv.h  IrrIMGUIInject_priv.h
unittests/: CMakeLists.txt  TestCharFifo.cpp  TestEventReceiver.cpp  TestHandleMockIMGUIDependency.cpp  TestIIMGUIHandleMock.cpp  TestInjection.cpp  TestIrrIMGUIDebug.cpp  TestIrrIMGUIHandle.cpp  TestMemoryLeakDetection.cpp  TestReferenceCounter.cpp  TestSettings.cpp  UnitTest.bat  UnitTest.sh  UnitTestMain.cpp  stb_compress_only.h
